# trajectory-visualization-ros

./: README.md
trajectory_visualization/: CMakeLists.txt  package.xml
trajectory_visualization/src/: trajectory_publisher_saver.cpp  trajectory_reader_publisher.cpp
trajectory_visualization/srv/: SaveTrajectory.srv
